objects/LBI__LPSummary__c.object
<CustomObject>
    <fields>
        <fullName>LBI__ConvertedToOpportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Has the lead been converted to an opportunity or not</description>
        <inlineHelpText>Has the lead been converted to an opportunity or not?</inlineHelpText>
        <label>Converted To Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Converted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Converted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LBI__Count__c</fullName>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LBI__CreatedWeek__c</fullName>
        <label>Created Week</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LBI__LeadSource__c</fullName>
        <label>Lead Source</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__LeadStatus__c</fullName>
        <label>Lead Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__RecordKey__c</fullName>
        <externalId>true</externalId>
        <label>RecordKey</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LBI__ScoreField__c</fullName>
        <label>Score Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__ScoreGroup__c</fullName>
        <label>Score Group</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LBI__SummaryType__c</fullName>
        <externalId>true</externalId>
        <label>Summary Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>LP Summary</label>
    <listViews>
        <fullName>LBI__AccountSummaries</fullName>
        <columns>NAME</columns>
        <columns>LBI__CreatedWeek__c</columns>
        <columns>LBI__ScoreField__c</columns>
        <columns>LBI__ScoreGroup__c</columns>
        <columns>LBI__Count__c</columns>
        <columns>LBI__RecordKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__SummaryType__c</field>
            <operation>equals</operation>
            <value>Account</value>
        </filters>
        <label>Account Summaries</label>
    </listViews>
    <listViews>
        <fullName>LBI__All</fullName>
        <columns>NAME</columns>
        <columns>LBI__CreatedWeek__c</columns>
        <columns>LBI__SummaryType__c</columns>
        <columns>LBI__LeadSource__c</columns>
        <columns>LBI__LeadStatus__c</columns>
        <columns>LBI__Converted__c</columns>
        <columns>LBI__ScoreField__c</columns>
        <columns>LBI__ScoreGroup__c</columns>
        <columns>LBI__Count__c</columns>
        <columns>LBI__RecordKey__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>LBI__ContactSummaries</fullName>
        <columns>NAME</columns>
        <columns>LBI__CreatedWeek__c</columns>
        <columns>LBI__ScoreField__c</columns>
        <columns>LBI__ScoreGroup__c</columns>
        <columns>LBI__Count__c</columns>
        <columns>LBI__RecordKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__SummaryType__c</field>
            <operation>equals</operation>
            <value>Contact</value>
        </filters>
        <label>Contact Summaries</label>
    </listViews>
    <listViews>
        <fullName>LBI__LeadSummaries</fullName>
        <columns>NAME</columns>
        <columns>LBI__CreatedWeek__c</columns>
        <columns>LBI__LeadSource__c</columns>
        <columns>LBI__LeadStatus__c</columns>
        <columns>LBI__Converted__c</columns>
        <columns>LBI__ConvertedToOpportunity__c</columns>
        <columns>LBI__ScoreField__c</columns>
        <columns>LBI__ScoreGroup__c</columns>
        <columns>LBI__Count__c</columns>
        <columns>LBI__RecordKey__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>LBI__SummaryType__c</field>
            <operation>equals</operation>
            <value>Lead</value>
        </filters>
        <label>Lead Summaries</label>
    </listViews>
    <nameField>
        <displayFormat>LS-{0000000000}</displayFormat>
        <label>LP Summary Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LP Summaries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>